# instacart-orders

./: Dockerfile  README.md  instacart-orders  pyproject.toml
.github/workflows/: pypi-publish.yml
Formula/: instacart-scraper.rb
docs/: humans.txt  index.html  llms.txt
man/man1/: instacart-order-history-download.1  instacart-order-history-fetch.1
