[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instacart-order-history-download"
version = "1.0.0"
description = "A command-line tool to download your Instacart order history"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Mike Vincent", email = "michael.thomas.vincent@gmail.com"}
]
keywords = ["instacart", "receipts", "orders", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
instacart-order-history-download = "instacart_order_history_download:main"

[project.urls]
Homepage = "https://mike-vincent.github.io/instacart-order-history-download"
Repository = "https://github.com/mike-vincent/instacart-order-history-download"
Issues = "https://github.com/mike-vincent/instacart-order-history-download/issues"
